# xo-game

./: TODO.md  pyproject.toml
app/: connection_manager.py  game_manager.py  main.py
app/templates/: index.html
